--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -7,7 +7,8 @@ C_FILES = main.c \
 		utils.c \
 		init.c \
 		free.c \
-		create_threads.c 
+		create_threads.c \
+		write_message.c
 
 OBJDIR = ./src/obj
 OBJ = $(C_FILES:%.c=%.o)
